k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoparts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoparts-api
  template:
    metadata:
      labels:
        app: autoparts-api
    spec:
      containers:
      - name: api
        image: ghcr.io/soniklvl/autoparts-api:main 
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: autoparts-api-service
spec:
  type: ClusterIP
  selector:
    app: autoparts-api
  ports:
    - protocol: TCP
      port: 80      # Порт, за яким звертатиметься фронтенд
      targetPort: 5000 # Порт всередині контейнера
