k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoparts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoparts-db
  template:
    metadata:
      labels:
        app: autoparts-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: autoparts-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
