k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoparts-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoparts-redis
  template:
    metadata:
      labels:
        app: autoparts-redis
    spec:
      containers:
      - name: redis
        image: redis:alpine 
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis 
spec:
  selector:
    app: autoparts-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
