k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoparts-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoparts-web
  template:
    metadata:
      labels:
        app: autoparts-web
    spec:
      containers:
      - name: web
        image: ghcr.io/soniklvl/autoparts-web:main
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: autoparts-web-service
spec:
  type: LoadBalancer
  selector:
    app: autoparts-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
